<resources>
    <string name="app_name">Parent</string>

    <string name="network_error">A network error has occurred.</string>
    <string name="request_error">Connection timed out.</string>
    <string name="retry">Retry</string>

    <string name="login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_mobile_no">Enter your mobile number</string>
    <string name="enter_password">Enter password</string>

    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="mobile_error">Mobile number cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="valid_mobile">Should be of 10 numbers</string>
    <string name="valid_password">Should be atleast 6 characters long</string>
    <string name="login_failed">Email &amp; Password dont match</string>
    <string name="error_msg">Couldn\'t connect to service.</string>
    <string name="no_user">Mobile number doesn\'t exist</string>
    <string name="ok">OK</string>

    <!--HomeworkFragment.java-->
    <string name="homework">Homework</string>
    <string name="no_homework">No homework!</string>
    <string name="change">Change</string>
    <string name="future_date">Selected date can\'t be future to present day</string>

    <string name="logout">Logout</string>

    <!--attendanceFragment.java-->
    <string name="attendance">Attendance</string>
    <string name="no_attendance">No absent record!</string>
    <string name="absent">Absent</string>
    <string name="absent_dates">Absent dates</string>
    <string name="absent_session">Absent dates - Morning / Afternoon</string>
    <string name="attendance_once">*Attendance is taken daily once</string>
    <string name="attendance_twice">*Attendance is taken twice a day</string>
    <string name="attendance_period">*Attendance is taken for each period</string>
    <string name="morning"><u>Morning</u></string>
    <string name="afternoon"><u>Afternoon</u></string>
    <string name="period">Period</string>
    <string name="p">P = Present</string>
    <string name="a">A = Absent</string>
    <string name="periods"><u>Periods</u></string>

    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>

    <string name="no_timetable">No Timetable</string>

    <!--Message-->
    <string name="no_groups">You are not part of any group</string>
    <string name="groups">Groups</string>
    <string name="nothing_shared">Nothing Shared!</string>
    <string name="no_chats">No Chats!</string>
    <string name="chat">Chat</string>
    <string name="speak">Speak</string>
    <string name="type_your_message">Enter msg</string>
    <string name="msg_if_any">Message if any..</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_image">Click here to choose image</string>
    <string name="send">Send</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="photo_video">Photo + Video</string>

    <string name="from">From :</string>
    <string name="created_at">Created at :</string>

    <string name="title">Title :</string>
    <string name="start_date">Start Date :</string>
    <string name="desc">Description :</string>
    <string name="end_date">End Date :</string>
    <string name="start_time">Start Time :</string>
    <string name="end_time">End Time :</string>
    <string name="show_hide_cal">Show / Hide Calendar</string>

    <string name="_new">New</string>
    <string name="gallery">Gallery</string>
    <string name="new_album">New Album</string>
    <string name="album_name">Album Name</string>
    <string name="cancel">Cancel</string>
    <string name="no_album">No Albums!</string>
    <string name="no_photos">No photos shared!</string>

    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="clas">Class</string>
    <string name="section">Section</string>
    <string name="school">School</string>
    <string name="father">Father\'s Name</string>
    <string name="mother">Mother\'s Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="mobile">Mobile</string>

    <string name="select_exam">Exam</string>
    <string name="subject">Subject</string>
    <string name="activity">Activity / Rubrics</string>
    <string name="max">Max</string>
    <string name="score">Score</string>
    <string name="obtained">/ Obtained</string>
    <string name="no_score">No Score!</string>

    <string name="features_enabled">Enabled / Disabled by Institution</string>
    <string name="notifications">Notifications</string>

    <string name="title_activity_homework">Homework</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_chats">Chat</string>
    <string name="title_activity_message">Group Message</string>
    <string name="title_activity_absent_view">Attendance</string>
    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_settings">Settings</string>

</resources>
