<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/attendance_period"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/periods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:text="@string/periods"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/text_xsmall" />

    <View
        android:id="@+id/topBorder"
        android:layout_below="@id/periods"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/dividerColor"/>

    <RelativeLayout
        android:id="@+id/tableLayout"
        android:layout_below="@+id/topBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="end"
            android:text="@string/p"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="end"
            android:text="@string/a"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:gravity="end"
            android:text="@string/attendance_period"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

</RelativeLayout>